Fix notes alignment.

--- a/notes-app/public/styles.css
+++ b/notes-app/public/styles.css
@@ -52,6 +52,7 @@ footer p {
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-content: flex-start;
+  align-items: flex-start;
 }
 
 a {
